--- a/Lab11 HTML CSS Full blocks/css/style.css
+++ b/Lab11 HTML CSS Full blocks/css/style.css
@@ -28,3 +28,32 @@ body{
     height: 80px;
     background-color: gray;
 }
+
+/* content styles */
+#contentWrap{
+    width: 1200px;
+    height: 1000px;
+    margin: 0 auto;
+    background-color: red;
+}
+.slider{
+    width: 1200px;
+    height: 400px;
+    background-color: #333;
+}
+#featuredImgWrap{
+    width: 1200px;
+    height: 300px;
+    background-color: green;
+}
+.featuredBox{
+    width: 300px;
+    height: 300px;
+    float: left;
+}
+#footerWrap{
+    width: 1200px;
+    height: 100px;
+    margin: 0 auto;
+    background-color: #666;
+}
